@@ -1,0 +1,4 @@
+import pysvn
+
+if __name__ == "__main__":
+    print pysvn.version
